--- a/src/components/Landingpage/Background.module.css
+++ b/src/components/Landingpage/Background.module.css
@@ -1,5 +1,4 @@
 .background {
-    margin: 0;
     align-content: center;
 }
 
@@ -12,10 +11,13 @@
 
 .background .bg_square {
     vertical-align: bottom;
-    display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 50%;
     aspect-ratio: 1/1;
     background-color: #4E9FD9;
+    color: white;
 }
 
 .background ul {
@@ -23,16 +25,20 @@
     padding: 0;
     height: 100%;
     list-style-type: none;
-
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
 }
 
 .background li {
-    color: white;
     font-size: 4.5rem;
+    padding-bottom: 0.6rem;
+}
+
+.background p {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 0 4rem;
 }
 
 .background .bg_square:nth-of-type(2n) {
