--- a/src/components/Forms/LoginForm.module.css
+++ b/src/components/Forms/LoginForm.module.css
@@ -12,7 +12,7 @@
     padding: 0.5rem;
     border-radius: 6px;
     border: 1px solid #ccc;
-    width: 20rem;
+    width: 4 0rem;
     max-width: 100%;
 }
 
