--- a/src/components/Books/Book.module.css
+++ b/src/components/Books/Book.module.css
@@ -1,5 +1,5 @@
 .book {
-    margin: 2rem 1rem;
+    /* margin: 2rem 1rem;    */
     display: flex;
     flex-direction: column;
     width: 200px;
