--- a/src/components/Forms/LoginForm.module.css
+++ b/src/components/Forms/LoginForm.module.css
@@ -1,23 +1,11 @@
 .login_form {
-    margin: 2rem;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     gap: 1rem;
-    margin-bottom: 1rem;
-    text-align: left;
+    justify-content: center;
 }
 
 .login_form input {
-    font: inherit;
-    padding: 0.5rem;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 4 0rem;
-    max-width: 100%;
+    max-width: 50rem;
 }
 
-.login_form label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    display: inline;
-}
+.login_form Button {}
