--- a/src/components/Landingpage/Background.module.css
+++ b/src/components/Landingpage/Background.module.css
@@ -1,23 +1,29 @@
 .background {
-    align-content: center;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.background>* {
+    color: white;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
 }
 
 .background .bg_img {
-    vertical-align: bottom;
-    width: 50%;
     object-fit: cover;
-    aspect-ratio: 1/1;
 }
 
-.background .bg_square {
-    vertical-align: bottom;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    aspect-ratio: 1/1;
+.background .bg_img:last-of-type {
+    grid-row: 6/7;
+}
+
+.background .bg_square:nth-of-type(2n) {
+    background-color: #EC7560;
+}
+
+.background .bg_square:nth-of-type(2n+1) {
     background-color: #4E9FD9;
-    color: white;
 }
 
 .background ul {
@@ -28,19 +34,42 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .background li {
-    font-size: 4.5rem;
+    font-size: 5vw;
     padding-bottom: 0.6rem;
 }
 
-.background p {
-    font-size: 1.5rem;
+.background .bg_square {
+    font-size: clamp(1.1rem, 2.5vw, 2.3rem);
+    display: grid;
+    place-items: center;
+    padding: 2.2rem;
     text-align: center;
-    padding: 0 4rem;
 }
 
-.background .bg_square:nth-of-type(2n) {
-    background-color: #EC7560;
+
+
+@media (min-width: 650px) {
+    .background {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .background>* {
+        aspect-ratio: 1/1;
+    }
+
+    .background>:nth-child(3) {
+        grid-column: 1/3;
+        aspect-ratio: auto;
+    }
+
+    .background .bg_img:last-of-type {
+        grid-row: auto;
+    }
+
+
+
 }
