--- a/src/components/Landingpage/ImageWButton.module.css
+++ b/src/components/Landingpage/ImageWButton.module.css
@@ -1,22 +1,20 @@
 .imagewbutton {
-    vertical-align: bottom;
-    display: inline-block;
-    width: 50%;
-    object-fit: cover;
-    aspect-ratio: 1/1;
-    position: relative;
-    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.imagewbutton>Button {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    width: 10rem;
+    height: 3rem;
 }
 
 .imagewbutton img {
-    vertical-align: bottom;
+    z-index: -1;
+    grid-row: 1/2;
+    grid-column: 1/2;
     width: 100%;
-    object-fit: cover;
     aspect-ratio: 1/1;
-}
-
-.imagewbutton Button {
-    position: absolute;
-    top: 47%;
-    left: 46%;
 }
