--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,6 +3,7 @@
     padding: 0.1rem;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     background-color: #785959;
 }
 
