--- a/src/components/Landingpage/DescriptionPanel.module.css
+++ b/src/components/Landingpage/DescriptionPanel.module.css
@@ -1,14 +1,43 @@
 .panel {
     display: flex;
+    justify-content: space-around;
     margin: 2rem auto;
     padding: 2rem;
     width: 90%;
     max-width: 70rem;
-    justify-content: space-around;
+    color: transparent;
+    font-weight: bolder;
+    font-style: italic;
+}
+
+.panel>* {
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.panel>*:hover {
+    color: rgb(0, 0, 0);
+}
+
+.panel>* {
+    border-radius: 50%;
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.panel>*>* {
+    grid-row: 1/2;
+    grid-column: 1/2;
+}
+
+.panel p {
+    z-index: 1;
 }
 
 .panel img {
-    width: clamp(85px, 15%, 145px);
+    width: clamp(65px, 12vw, 145px);
     border-radius: 50%;
 }
 
