Modal with Login-Register toggle

--- a/src/components/Forms/LoginForm.module.css
+++ b/src/components/Forms/LoginForm.module.css
@@ -1,10 +1,22 @@
 .login_form {
     display: grid;
+    margin: 2rem;
     gap: 1rem;
     place-items: center;
 }
 
 .login_form input {
-    width: min(200px, 15vw);
-    width: 20vw;
+    width: clamp(240px, 40vw, 400px);
+    border-radius: 7px;
+    padding: 0.3rem;
+    border: 1px solid rgb(209, 206, 206);
+}
+
+.login_form label {
+    font-size: 1.3rem;
+    margin-right: auto;
+}
+
+.login_form h5 {
+    margin: 0;
 }
