--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -10,10 +10,10 @@
 
 .modal {
     position: fixed;
-    top: 30vh;
-    left: 25%;
-    width: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
     z-index: 12;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
