--- a/src/components/Forms/RegisterForm.module.css
+++ b/src/components/Forms/RegisterForm.module.css
@@ -1,23 +1,18 @@
 .register_form {
+    display: grid;
     margin: 2rem;
-    display: flex;
-    flex-wrap: wrap;
     gap: 1rem;
-    margin-bottom: 1rem;
-    text-align: left;
+    place-items: center;
 }
 
 .register_form input {
-    font: inherit;
-    padding: 0.5rem;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    width: 40rem;
-    max-width: 100%;
+    width: clamp(240px, 40vw, 400px);
+    border-radius: 7px;
+    padding: 0.3rem;
+    border: 1px solid rgb(209, 206, 206);
 }
 
 .register_form label {
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    display: inline-block;
+    font-size: 1.2rem;
+    margin-right: auto;
 }
