--- a/src/components/Landingpage/Background.module.css
+++ b/src/components/Landingpage/Background.module.css
@@ -35,6 +35,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+
+    letter-spacing: 0.8rem;
 }
 
 .background li {
