--- a/src/components/Forms/LoginForm.module.css
+++ b/src/components/Forms/LoginForm.module.css
@@ -20,3 +20,12 @@
 .login_form h5 {
     margin: 0;
 }
+
+.login_form h5 span {
+    cursor: pointer;
+    color: #4E9FD9;
+}
+
+.login_form h5 span:hover {
+    text-decoration: underline;
+}
