--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .nav {
     margin: 0;
-    padding: 0.5rem;
+    padding: 0.5rem 0rem;
     display: flex;
     gap: 0.8rem;
     justify-content: space-between;
@@ -10,16 +10,14 @@
 
 .nav ul {
     margin: 0;
-    padding: 0;
+    padding: 0 1rem;
     display: flex;
     gap: 3rem;
-    justify-content: space-around;
+    justify-content: flex-start;
     list-style: none;
     align-items: center;
     flex-grow: 2;
 }
-
-
 
 .nav li,
 .nav a {
@@ -27,14 +25,14 @@
     text-decoration: none;
 }
 
-.nav ul:nth-of-type(2) li {
-    flex-grow: 1;
+.nav ul:nth-of-type(2) {
+    justify-content: end;
+    /* flex-grow: 1; */
     text-align: center;
 }
 
 .nav li:hover {
-    /* transform: translateY(-3px); */
-    padding-bottom: 3px;
+    transform: translateY(-3px);
     transition: 0.15s;
 }
 
