--- a/src/components/Books/Bookboard.module.css
+++ b/src/components/Books/Bookboard.module.css
@@ -6,8 +6,32 @@
     padding: 0.1rem;
 }
 
-.bookboard .searchbar {
-    margin: 3rem 1rem;
+.bookboard .actions {
+    margin: 3rem 0;
     display: flex;
+    gap: 1rem;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.searchbar {
+    /* width: clamp(250px, 2vw, 500px); */
+    /* flex-grow: 0.5; */
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    border: 1px solid rgb(122, 121, 121);
+    border-radius: 8px;
+}
+
+.searchbar img {
+    /* display: none; */
+    height: 20px;
+    padding-inline: 6px;
+}
+
+.searchbar input,
+.searchbar input:focus {
+    border: 0px;
+    outline: none;
 }
