--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -12,8 +12,21 @@
     position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
 
-    z-index: 12;
+    z-index: 11;
     /* overflow: hidden; */
+    animation: slide-down 300ms ease-out forwards;
+}
+
+@keyframes slide-down {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -35%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
